JS -> navbar-d switch color to white

--- a/src/templates/_nav.html
+++ b/src/templates/_nav.html
@@ -9,10 +9,12 @@
   </div>
   <nav>
     <ul class="nav--links">
-      <li id="link1"><a href="./cafe.html">das Café</a></li>
-      <li id="link2"><a href=" ./herkunft.html">Herkunft </a></li>
-      <li id="link3"><a href="#">Shop</a></li>
-      <li id="link4"><a href="./kontakt.html">Kontakt</a></li>
+      <li><a href="./cafe.html">das Café</a></li>
+      <li><a href=" ./herkunft.html">Herkunft </a></li>
+      <li><a href="#">Shop</a></li>
+      <li><a href=""><img src="../src/assets/main/icons/icon__shop-blk.svg" alt=""
+        /></a></li>
+      <li><a href="./kontakt.html" color=red; >Kontakt</a></li>
     </ul>
   </nav>
 </div>
