--- a/src/templates/_nav.html
+++ b/src/templates/_nav.html
@@ -1,7 +1,9 @@
 <div id="nav-d" class="navbar">
   <div class="nav--logo">
     <a href="index.html"
-      ><img src="../src/assets/main/icons/icon__logo_wh.svg" alt=""
+      ><img
+        src="../src/assets/main/icons/icon__logo_wh.svg"
+        alt="Rustica logo icon"
     /></a>
   </div>
   <div class="nav--logo-switch">
@@ -12,9 +14,14 @@
       <li><a href="./cafe.html">das Café</a></li>
       <li><a href=" ./herkunft.html">Herkunft </a></li>
       <li><a href="#">Shop</a></li>
-      <li><a href=""><img src="../src/assets/main/icons/icon__shop-blk.svg" alt=""
-        /></a></li>
-      <li><a href="./kontakt.html" color=red; >Kontakt</a></li>
+      <li class="shop-icon">
+        <a href="">
+          <img
+            src="../src/assets/main/icons/icon__shop-wht.svg"
+            alt="Shop icon"
+        /></a>
+      </li>
+      <li><a href="./kontakt.html" color="red;">Kontakt</a></li>
     </ul>
   </nav>
 </div>
