nav--menu onclick animation

--- a/src/templates/_nav-m.html
+++ b/src/templates/_nav-m.html
@@ -8,7 +8,7 @@
             </h3>
         </ul>
     </nav>
-    <div class="nav--menu-close">
+    <div id="menu-close" class="nav--menu-close">
         <img src="../src/assets/main/icons/icon__burger-menu-close.svg" alt="A white X">
     </div>
 </div>
@@ -19,8 +19,8 @@
                 <img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo">
             </a>
         </div>
-        <div class="nav--burger">
-            <a href="index.html">
+        <div id="nav--burger" class="nav--burger">
+            <a href="#">
                 <img src="../src/assets/main/icons/icon__burger-menu-wht.svg" alt="Rustica Logo">
             </a>
         </div>
