navbar-m add color switch

--- a/src/templates/_nav-m.html
+++ b/src/templates/_nav-m.html
@@ -13,8 +13,8 @@
     </div>
 </div>
 <div id="nav-m">
-    <div class="navbar-m">
-        <div class="nav--logo">
+    <div id="nav-m-container" class="navbar-m">
+        <div id="nav--logo-m" class="nav--logo">
             <a href="index.html">
                 <img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo">
             </a>
