navbar-m fix logo scaling bug

--- a/src/templates/_nav-m.html
+++ b/src/templates/_nav-m.html
@@ -14,7 +14,7 @@
 </div>
 <div id="nav-m">
     <div id="nav-m-container" class="navbar-m">
-        <div id="nav--logo-m" class="nav--logo">
+        <div id="nav--logo-m" class="nav--logo-m">
             <a href="index.html">
                 <img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo">
             </a>
