fix navbar_impressum; fix subpage html footer section

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,7 +11,8 @@
 @import "components/section--inhalt";
 @import "components/section--ort";
 @import "components/section--gallery";
-@import "components/footer.scss";
+@import "components/section--impressum";
+@import "components/footer";
 @import "components/btn--dunkel";
 @import "components/section--kontakt";
 @import "components/form";
