--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,6 +6,7 @@
 @import "components/nav-m";
 @import "components/header";
 @import "components/main--section";
+@import "components/shop";
 @import "components/section--sorten";
 @import "components/section--herkunft";
 @import "components/section--inhalt";
