--- a/src/templates/_footer.html
+++ b/src/templates/_footer.html
@@ -19,7 +19,7 @@
         <div class="footer--info-links">
             <ul>
                 <li><a href="./cafe.html">Café</a></li>
-                <li class="body-text"><a href="#">Shop</a></li>
+                <li class="body-text"><a href="./shop.html">Shop</a></li>
                 <li class="body-text"><a href="./herkunft.html">Herkunft</a></li>
             </ul>
         </div>
