--- a/src/templates/_nav.html
+++ b/src/templates/_nav.html
@@ -13,9 +13,9 @@
     <ul class="nav--links">
       <li><a href="./cafe.html">das Café</a></li>
       <li><a href=" ./herkunft.html">Herkunft </a></li>
-      <li><a href="#">Shop</a></li>
+      <li><a href="./shop.html">Shop</a></li>
       <li class="shop-icon">
-        <a href="">
+        <a href="#">
           <img
             src="../src/assets/main/icons/icon__shop-wht.svg"
             alt="Shop icon"
