--- a/src/templates/_nav-m.html
+++ b/src/templates/_nav-m.html
@@ -4,7 +4,7 @@
             <h3>
                 <li class="h3"><a href="./cafe.html"">das Café</a></li>
         <li class=" h3"><a href="./herkunft.html">Herkunft</a></li>
-                <li class="h3"><a href="#">Shop</a></li>
+                <li class="h3"><a href="./shop.html">Shop</a></li>
             </h3>
         </ul>
     </nav>
