navbar restructure to fix color bug

--- a/src/templates/_nav.html
+++ b/src/templates/_nav.html
@@ -25,3 +25,31 @@
     </ul>
   </nav>
 </div>
+<div id="nav--menu" class="nav--menu">
+  <nav>
+      <ul class="nav--links-m">
+          <h3>
+              <li class="h3"><a href="./cafe.html"">das Café</a></li>
+      <li class=" h3"><a href="./herkunft.html">Herkunft</a></li>
+              <li class="h3"><a href="./shop.html">Shop</a></li>
+          </h3>
+      </ul>
+  </nav>
+  <div id="menu-close" class="nav--menu-close">
+      <img src="../src/assets/main/icons/icon__burger-menu-close.svg" alt="A white X">
+  </div>
+</div>
+<div id="nav-m">
+  <div id="nav-m-container" class="navbar-m">
+      <div id="nav--logo-m" class="nav--logo-m">
+          <a href="index.html">
+              <img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo">
+          </a>
+      </div>
+      <div id="nav--burger" class="nav--burger">
+          <a href="#">
+              <img src="../src/assets/main/icons/icon__burger-menu-wht.svg" alt="Rustica Logo">
+          </a>
+      </div>
+  </div>
+</div>
