--- a/src/templates/_nav--static-wh.html
+++ b/src/templates/_nav--static-wh.html
@@ -14,12 +14,18 @@
         <li><a href="./cafe.html" class="invertColor">das Café</a></li>
         <li><a href=" ./herkunft.html" class="invertColor">Herkunft </a></li>
         <li><a href="./shop.html" class="invertColor">Shop</a></li>
-        <li class="shop-icon">
+        <li class="cart-icon">
           <a href="#" class="invertColor">
             <img
               src="../src/assets/main/icons/icon__shop-wht.svg"
-              alt="Shop icon"
+              alt="Shopping Cart"
           /></a>
+          <div class="cart-btn">
+            <span class="nav-icon">
+              <i class="cart-plus"></i>
+            </span>
+            <div class="cart-items">0</div>
+          </div>
         </li>
         <li><a href="./kontakt.html" class="invertColor">Kontakt</a></li>
       </ul>
