--- a/src/templates/_nav.html
+++ b/src/templates/_nav.html
@@ -1,3 +1,4 @@
+<!-- navbar desktop -->
 <div id="nav-d" class="navbar">
   <div class="nav--logo">
     <a href="index.html"
@@ -14,17 +15,24 @@
       <li><a href="./cafe.html">das Café</a></li>
       <li><a href=" ./herkunft.html">Herkunft </a></li>
       <li><a href="./shop.html">Shop</a></li>
-      <li class="shop-icon">
+      <li class="cart-icon">
         <a href="#">
           <img
             src="../src/assets/main/icons/icon__shop-wht.svg"
-            alt="Shop icon"
+            alt="Shopping Cart"
         /></a>
+        <div class="cart-btn">
+          <span class="nav-icon">
+            <i class="cart-plus"></i>
+          </span>
+          <div class="cart-items">0</div>
+        </div>
       </li>
       <li><a href="./kontakt.html" color="red;">Kontakt</a></li>
     </ul>
   </nav>
 </div>
+<!--nav menu slider-->
 <div id="nav--menu" class="nav--menu">
   <nav>
       <ul class="nav--links-m">
@@ -39,6 +47,7 @@
       <img src="../src/assets/main/icons/icon__burger-menu-close.svg" alt="A white X">
   </div>
 </div>
+<!--navbar mobile-->
 <div id="nav-m">
   <div id="nav-m-container" class="navbar-m">
       <div id="nav--logo-m" class="nav--logo-m">
