--- a/src/css/_typography.scss
+++ b/src/css/_typography.scss
@@ -36,6 +36,7 @@ $font--font-weight-sh-m: 400;
 $font--font-size-sh-m: 1.8rem;
 
 $font--font-weight-regular: 400;
+$font--font-weight-bold: 900;
 
 // TABLET
 
